--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
+﻿@model GetYourKnowledge.Models.InputAdviceAmountModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="clean-block-heading">
+    <h2 class="text-info">Get your advices</h2>
+    <form asp-action="GetQuotes">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label for="Amount" class="control-label">How many advices would you like to see? (5-20)</label>
+            <input asp-for="Amount" class="form-control" />
+            <span asp-validation-for="Amount" class="text-danger"></span>
+        </div>
+        <input type="submit" class="btn btn-success" value="Get me the advices!">
+    </form>
 </div>
