--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,9 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.clean-block-heading {
+    padding-top: 50px;
+    margin-bottom: 40px;
+    text-align: center;
+}
