Better structuring of the project, renamed namespace to GetYourKnowledge.MVC

--- a/GetYourKnowlegde.MVC/Views/Home/Index.cshtml
+++ b/GetYourKnowlegde.MVC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model GetYourKnowledge.Models.InputAdviceAmountModel
+﻿@model GetYourKnowledge.MVC.Models.InputAdviceAmountModel
 
 @{
     ViewData["Title"] = "Home Page";
