--- a/GetYourKnowlegde.MVC/Views/Home/Advices.cshtml
+++ b/GetYourKnowlegde.MVC/Views/Home/Advices.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<GetYourKnowledge.MVC.Models.AdviceWithTranslationModel>
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Advices";
 }
-<p>Your @Model.Count() advices</p>
+<h2 class="text-center my-2">Your @Model.Count() advices</h2>
 <ul class="list-group">
     @foreach (var advice in Model)
     {
         <li class="list-group-item">@advice.Id ) @advice.Advice <br />@advice.Translation</li>
     }
 </ul>
-<a class="btn btn-primary" asp-action="Index">Back</a>
+<div class="my-2">
+    <a class="btn btn-primary" asp-action="Index">Back</a>
+</div>
