--- a/GetYourKnowlegde.MVC/Views/Home/Index.cshtml
+++ b/GetYourKnowlegde.MVC/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="clean-block-heading">
     <h2 class="text-info">Get your advices</h2>
-    <form asp-action="GetQuotes">
+    <form asp-action="GetAdvices">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label for="Amount" class="control-label">How many advices would you like to see? (5-20)</label>
