Disabling input while a page is loading when a user submits a form

--- a/GetYourKnowlegde.MVC/Views/Home/Advices.cshtml
+++ b/GetYourKnowlegde.MVC/Views/Home/Advices.cshtml
@@ -10,6 +10,6 @@
         <li class="list-group-item">@advice.Id ) @advice.Advice <br />@advice.Translation</li>
     }
 </ul>
-<div class="my-2">
+<div class="py-2">
     <a class="btn btn-primary" asp-action="Index">Back</a>
 </div>
